--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -1,7 +1,24 @@
+API_BASE_URL=http://webapi:8000
+
+OAUTH2_ISSUER=input-your-domain
+OAUTH2_AUDIENCE=input-your-domain
+OAUTH2_ALGORITHM=HS256
+OAUTH2_TOKEN_SECRET=input-your-secret
+OAUTH2_CODE_SECRET=input-your-secret
+
+POSTGRES_USER=rdb
+POSTGRES_PASSWORD=rdb
+POSTGRES_HOST=rdb
+POSTGRES_PORT=5432
+POSTGRES_DB=rdb
+
 REDIS_HOST=kvs
 REDIS_PORT=6379
 
 QDRANT_HOST=vdb
 QDRANT_PORT=6333
+
+EMAIL_FROM_ADDRESS=input-your-email-address
+RESEND_API_KEY=input-your-resend-api-key
 
 OPENAI_API_KEY=input-your-openai-api-key
