--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -4,19 +4,18 @@ OAUTH2_ISSUER=input-your-domain
 OAUTH2_AUDIENCE=input-your-domain
 OAUTH2_ALGORITHM=HS256
 OAUTH2_TOKEN_SECRET=input-your-secret
-OAUTH2_CODE_SECRET=input-your-secret
 
-POSTGRES_USER=rdb
-POSTGRES_PASSWORD=rdb
-POSTGRES_HOST=rdb
-POSTGRES_PORT=5432
-POSTGRES_DB=rdb
+RDB_USER=rdb
+RDB_PASSWORD=rdb
+RDB_HOST=rdb
+RDB_PORT=5432
+RDB_DB=rdb
 
-REDIS_HOST=kvs
-REDIS_PORT=6379
+KVS_HOST=kvs
+KVS_PORT=6379
 
-QDRANT_HOST=vdb
-QDRANT_PORT=6333
+VDB_HOST=vdb
+VDB_PORT=6333
 
 EMAIL_FROM_ADDRESS=input-your-email-address
 RESEND_API_KEY=input-your-resend-api-key
