--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -20,4 +20,7 @@ VDB_PORT=6333
 EMAIL_FROM_ADDRESS=input-your-email-address
 RESEND_API_KEY=input-your-resend-api-key
 
+STRIPE_API_KEY=input-your-stripe-api-key
+STRIPE_SECRET_KEY=input-your-stripe-secret-key
+
 OPENAI_API_KEY=input-your-openai-api-key
