--- a/app/webapi/pyproject.toml
+++ b/app/webapi/pyproject.toml
@@ -28,6 +28,8 @@ redis = "^5.1.0"
 openai = "^1.51.0"
 qdrant-client = "^1.11.3"
 resend = "^2.4.0"
+stripe = "^11.4.1"
+google-generativeai = "^0.8.3"
 
 
 [build-system]
