--- a/app/webapi/Makefile
+++ b/app/webapi/Makefile
@@ -1,4 +1,4 @@
-.PHONY: migration migrate
+.PHONY: migration migrate test
 
 # make migration file (ex: make migration MESSAGE="init")
 migration:
@@ -7,6 +7,7 @@ migration:
 migrate:
 	docker exec -it -w /webapi webapi alembic upgrade head
 
-
+test:
+	docker exec -it -w /webapi webapi pytest --cov --cov-branch -vs tests
 
 
