--- a/app/webapi/Makefile
+++ b/app/webapi/Makefile
@@ -1,4 +1,4 @@
-.PHONY: migration migrate test
+.PHONY: migration migrate test test-unit test-integration test-e2e
 
 # make migration file (ex: make migration MESSAGE="init")
 migration:
@@ -10,4 +10,11 @@ migrate:
 test:
 	docker exec -it -w /webapi webapi pytest --cov --cov-branch -vs tests
 
+test-unit:
+	docker exec -it -w /webapi webapi pytest --cov --cov-branch -vs tests/unit
 
+test-integration:
+	docker exec -it -w /webapi webapi pytest --cov --cov-branch -vs tests/integration
+
+test-e2e:
+	docker exec -it -w /webapi webapi pytest --cov --cov-branch -vs tests/e2e
