--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -38,7 +38,7 @@ services:
       dockerfile: ./docker/rdb/Dockerfile
     volumes:
       - type: bind
-        source: ./app/rdb/postgresql/data
+        source: ./app/rdb/postgresql/dev
         target: /var/lib/postgresql/data
     environment:
       POSTGRES_DB: ${RDB_NAME}
@@ -60,7 +60,7 @@ services:
       dockerfile: ./docker/kvs/Dockerfile
     volumes:
       - type: bind
-        source: ./app/kvs/redis/data
+        source: ./app/kvs/redis/dev
         target: /data
     ports:
       - "${KVS_PORT}:${KVS_PORT}"
@@ -73,7 +73,7 @@ services:
       dockerfile: ./docker/vdb/Dockerfile
     volumes:
       - type: bind
-        source: ./app/vdb/qdrant/data
+        source: ./app/vdb/qdrant/dev
         target: /qdrant/storage
     ports:
       - "${VDB_PORT}:${VDB_PORT}"
