--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -25,3 +25,4 @@ STRIPE_API_KEY=input-your-stripe-api-key
 STRIPE_SECRET_KEY=input-your-stripe-secret-key
 
 OPENAI_API_KEY=input-your-openai-api-key
+GOOGLE_API_KEY=input-your-google-api-key
