--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -26,3 +26,4 @@ STRIPE_SECRET_KEY=input-your-stripe-secret-key
 
 OPENAI_API_KEY=input-your-openai-api-key
 GOOGLE_API_KEY=input-your-google-api-key
+ANTHROPIC_API_KEY=input-your-anthropic-api-key
