--- a/app/webapi/pyproject.toml
+++ b/app/webapi/pyproject.toml
@@ -30,6 +30,7 @@ qdrant-client = "^1.11.3"
 resend = "^2.4.0"
 stripe = "^11.4.1"
 google-generativeai = "^0.8.3"
+anthropic = "^0.42.0"
 
 
 [build-system]
