--- a/app/webapi/pyproject.toml
+++ b/app/webapi/pyproject.toml
@@ -31,7 +31,11 @@ resend = "^2.4.0"
 stripe = "^11.4.1"
 google-generativeai = "^0.8.3"
 anthropic = "^0.42.0"
+pillow = "^11.1.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-asyncio = "^0.25.2"
 
 [build-system]
 requires = ["poetry-core"]
