--- a/app/webview/package.json
+++ b/app/webview/package.json
@@ -13,6 +13,7 @@
 		"format:fix": "biome format --write ./"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/react-label": "^2.1.1",
