--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -10,7 +10,7 @@ RDB_USER=rdb
 RDB_PASSWORD=rdb
 RDB_HOST=rdb
 RDB_PORT=5432
-RDB_DB=rdb
+RDB_NAME=rdb
 
 KVS_HOST=kvs
 KVS_PORT=6379
@@ -21,7 +21,6 @@ VDB_PORT=6333
 EMAIL_FROM_ADDRESS=input-your-email-address
 RESEND_API_KEY=input-your-resend-api-key
 
-STRIPE_API_KEY=input-your-stripe-api-key
 STRIPE_SECRET_KEY=input-your-stripe-secret-key
 
 OPENAI_API_KEY=input-your-openai-api-key
