--- a/app/webview/.env.example
+++ b/app/webview/.env.example
@@ -2,3 +2,4 @@ NODE_ENV=development
 BASE_URL=http://webview:3000
 API_BASE_URL=http://webapi:8000
 AUTH_SECRET= # Added by `npx auth`. Read more: https://cli.authjs.dev
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
