--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -45,7 +45,7 @@ services:
       POSTGRES_USER: ${RDB_USER}
       POSTGRES_PASSWORD: ${RDB_PASSWORD}
     ports:
-      - "${RDB_PORT}:${RDB_PORT}"
+      - "127.0.0.1:${RDB_PORT}:${RDB_PORT}"
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${RDB_USER} -d ${RDB_NAME}"]
@@ -63,7 +63,7 @@ services:
         source: ./app/kvs/redis/dev
         target: /data
     ports:
-      - "${KVS_PORT}:${KVS_PORT}"
+      - "127.0.0.1:${KVS_PORT}:${KVS_PORT}"
     restart: always
 
   vdb:
@@ -76,5 +76,5 @@ services:
         source: ./app/vdb/qdrant/dev
         target: /qdrant/storage
     ports:
-      - "${VDB_PORT}:${VDB_PORT}"
+      - "127.0.0.1:${VDB_PORT}:${VDB_PORT}"
     restart: always
