fix stripe webhook

--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -22,6 +22,7 @@ EMAIL_FROM_ADDRESS=input-your-email-address
 RESEND_API_KEY=input-your-resend-api-key
 
 STRIPE_SECRET_KEY=input-your-stripe-secret-key
+STRIPE_ENDPOINT_SECRET=input-your0stripe-endpoint-secret
 
 OPENAI_API_KEY=input-your-openai-api-key
 GOOGLE_API_KEY=input-your-google-api-key
