--- a/app/webview/package.json
+++ b/app/webview/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-toast": "^1.2.4",
 		"@stripe/react-stripe-js": "^3.1.1",
 		"@stripe/stripe-js": "^5.5.0",
+		"@tanstack/react-table": "^8.20.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.469.0",
