--- a/app/webapi/.env.example
+++ b/app/webapi/.env.example
@@ -15,8 +15,8 @@ RDB_NAME=rdb
 KVS_HOST=kvs
 KVS_PORT=6379
 
-VDB_HOST=vdb
-VDB_PORT=6333
+VECTOR_HOST=vector
+VECTOR_PORT=6333
 
 EMAIL_FROM_ADDRESS=input-your-email-address
 RESEND_API_KEY=input-your-resend-api-key
