--- a/compose.test.yml
+++ b/compose.test.yml
@@ -91,3 +91,16 @@ services:
     ports:
       - "127.0.0.1:${VECTOR_PORT}:${VECTOR_PORT}"
     restart: always
+
+  graph:
+    container_name: graph
+    build:
+      context: .
+      dockerfile: ./docker/graph/Dockerfile
+    volumes:
+      - type: bind
+        source: ./app/graph/neo4j/test
+        target: /data
+    ports:
+      - "127.0.0.1:${GRAPH_PORT}:${GRAPH_PORT}"
+    restart: always
