--- a/app/webapi/pyproject.toml
+++ b/app/webapi/pyproject.toml
@@ -29,11 +29,14 @@ openai = "^1.51.0"
 qdrant-client = "^1.11.3"
 resend = "^2.4.0"
 stripe = "^11.4.1"
-google-generativeai = "^0.8.3"
-anthropic = "^0.42.0"
 pillow = "^11.1.0"
 celery = "^5.4.0"
 neo4j = "^5.28.1"
+langchain = "^0.3.19"
+langchain-core = "^0.3.37"
+langchain-openai = "^0.3.6"
+langchain-google-genai = "^2.0.10"
+langchain-anthropic = "^0.3.7"
 
 
 [tool.poetry.group.dev.dependencies]
