--- a/app/webapi/pyproject.toml
+++ b/app/webapi/pyproject.toml
@@ -37,6 +37,7 @@ langchain-core = "^0.3.37"
 langchain-openai = "^0.3.6"
 langchain-google-genai = "^2.0.10"
 langchain-anthropic = "^0.3.7"
+python-magic = "^0.4.27"
 
 
 [tool.poetry.group.dev.dependencies]
